fix chip css to even spacing

--- a/src-core/src/components/chip/chip.scss
+++ b/src-core/src/components/chip/chip.scss
@@ -19,7 +19,7 @@ $chip-height: 30px; // with border it's 32px.
   @include align-items(center);
 
   .value {
-    .can-close {
+    &.can-close {
       cursor: default;
       padding-right: $spacing-small;
     }  
